Added sections with ids corresponding to nav

--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
         <img src="./assets/images/hero_image.jpg" alt="Digital Spider's Web">
     </div>
     <main>
+        <section id="about">
 
+        </section>
+        <section id="work">
+
+        </section>
+        <section id="contact">
+
+        </section>
     </main>
     <footer>
 
