Added more styles to the header and hero image

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <div id="hero">
-        <img src="./assets/images/hero_image.jpg" alt="Digital Spider's Web">
+        <img alt="Digital Spider's Web">
     </div>
     <main>
         <section id="about">
