Finished styles for Header, nav, and hero image

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
     <div id="hero">
         <img alt="Digital Spider's Web">
+        <h2>Future Portfolio!</h2>
     </div>
     <main>
         <section id="about">
