Added comments to HTML and section content (About Me & Work)

--- a/index.html
+++ b/index.html
@@ -21,12 +21,28 @@
         <h2>Future Portfolio!</h2>
     </div>
     <main>
+        <!-- About Section -->
         <section id="about">
-
+            <div class="container">
+                <div class="title">
+                    <h3>About Me</h3>
+                </div>
+                <div class="content">
+                    <p> I'm a computer programmer, passionate about problem 
+                        solving and learning new skills. I have 2 years of 
+                        experience with several projects.</p>
+                </div>
+            </div>
         </section>
+
+        <!-- Work Section  -->
         <section id="work">
-
+            <div class="title">
+                <h2>Work</h2>
+            </div>
         </section>
+
+        <!-- Contact Section -->
         <section id="contact">
 
         </section>
