--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section id="about">
             <div class="container">
                 <div class="title">
-                    <h3>About Me</h3>
+                    <h2>About Me</h2>
                 </div>
                 <div class="content">
                     <p> I'm a computer programmer, passionate about problem 
@@ -37,14 +37,30 @@
 
         <!-- Work Section  -->
         <section id="work">
-            <div class="title">
-                <h2>Work</h2>
+            <div class="container">
+                <div class="title">
+                    <h2>Work</h2>
+                </div>
+                <div class="border"></div>
+                <div class="content">
+
+                </div>
             </div>
         </section>
 
         <!-- Contact Section -->
         <section id="contact">
-
+            <div class="container">
+                <div class="title">
+                    <h2>Contact Me</h2>
+                </div>
+                <div class="content">
+                    <a href="tel: 407-402-4355">407.402.4355</a>
+                    <a href="mailto: danieljlongacre@gmail.com">danieljlongacre@gmail.com</a>
+                    <a href="https://github.com/DanielLongacre/Personal-Website">GitHub</a>
+                    <a href="https://www.linkedin.com/in/daniellongacre/">LinkedIn</a>
+                </div>
+            </div>
         </section>
     </main>
     <footer>
