--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="#about">About Me</a>
             <a href="#work">Work</a>
             <a href="#contact">Contact Me</a>
-            <a href="./assets/images/DanielLongacreResume.pdf">Resume</a>
+            <a href="./assets/images/DanielLongacreResume.pdf" target="_blank">Resume</a>
         </nav>
     </header>
     <div id="hero">
