Added html comments and  divs, h4, imgs to the work section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <h1>Daniel Longacre</h1>
         <nav>
@@ -41,9 +42,19 @@
                 <div class="title">
                     <h2>Work</h2>
                 </div>
-                <div class="border"></div>
                 <div class="content">
-
+                    <div id="work1">
+                        <h4></h4>
+                        <img src="" alt="">
+                    </div>
+                    <div id="work2">
+                        <h4></h4>
+                        <img src="" alt="">
+                    </div>
+                    <div id="work3">
+                        <h4></h4>
+                        <img src="" alt="">
+                    </div>
                 </div>
             </div>
         </section>
@@ -63,6 +74,8 @@
             </div>
         </section>
     </main>
+
+    <!-- Footer -->
     <footer>
 
     </footer>
