Added h4s and started styling the #work section

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
                 </div>
                 <div class="content">
                     <div id="work1">
-                        <h4></h4>
+                        <h4>Surf Report</h4>
                         <img src="" alt="">
                     </div>
                     <div id="work2">
-                        <h4></h4>
+                        <h4>LED Wall</h4>
                         <img src="" alt="">
                     </div>
                     <div id="work3">
-                        <h4></h4>
+                        <h4>Calculator</h4>
                         <img src="" alt="">
                     </div>
                 </div>
