--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
                     <h2>Work</h2>
                 </div>
                 <div class="content">
-                    <div id="work1">
+                    <div class="box" id="work1">
                         <h4>Surf Report</h4>
                         <img src="" alt="">
                     </div>
-                    <div id="work2">
+                    <div class="box" id="work2">
                         <h4>LED Wall</h4>
                         <img src="" alt="">
                     </div>
-                    <div id="work3">
+                    <div class="box" id="work3">
                         <h4>Calculator</h4>
                         <img src="" alt="">
                     </div>
