Added p elements to work boxes and styled so they they sit in the lower left of the work boxes

--- a/index.html
+++ b/index.html
@@ -44,13 +44,18 @@
                 </div>
                 <div class="content">
                     <div class="box" id="work1">
-                        <h4>Surf Report</h4> 
+                        <div>
+                            <h4>Surf Report</h4> 
+                            <p>MERN Stack</p>
+                        </div>
                     </div>
                     <div class="box" id="work2">
                         <h4>LED Wall</h4>
+                        <p>Node/IoT</p>
                     </div>
                     <div class="box" id="work3">
                         <h4>Calculator</h4>
+                        <p>React/JavaScript/CSS</p>
                     </div>
                 </div>
             </div>
