--- a/index.html
+++ b/index.html
@@ -44,18 +44,22 @@
                 </div>
                 <div class="content">
                     <div class="box" id="work1">
-                        <div>
+                        <div class="backgrounds">
                             <h4>Surf Report</h4> 
                             <p>MERN Stack</p>
                         </div>
                     </div>
                     <div class="box" id="work2">
-                        <h4>LED Wall</h4>
-                        <p>Node/IoT</p>
+                        <div class="backgrounds">
+                            <h4>LED Wall</h4>
+                            <p>Node/IoT</p>
+                        </div>
                     </div>
                     <div class="box" id="work3">
-                        <h4>Calculator</h4>
-                        <p>React/JavaScript/CSS</p>
+                        <div class="backgrounds">
+                            <h4>Calculator</h4>
+                            <p>React/JavaScript/CSS</p>
+                        </div>
                     </div>
                 </div>
             </div>
