--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
                             <p>React/JavaScript/CSS</p>
                         </div>
                     </div>
+                    <div class="box" id="work1">
+                        <div class="backgrounds">
+                            <h4>Pastel Puzzels</h4> 
+                            <p>MERN Stack</p>
+                        </div>
+                    </div>
+                    <div class="box" id="work1">
+                        <div class="backgrounds">
+                            <h4>Run Buddy</h4> 
+                            <p>HTML/CSS</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
