Added more comments to CSS and changed font size of nav links

--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 <div class="content">
                     <a href="tel: 407-402-4355">407.402.4355</a>
                     <a href="mailto: danieljlongacre@gmail.com">danieljlongacre@gmail.com</a>
-                    <a href="https://github.com/DanielLongacre/Personal-Website">GitHub</a>
-                    <a href="https://www.linkedin.com/in/daniellongacre/">LinkedIn</a>
+                    <a href="https://github.com/DanielLongacre/Personal-Website" target="_blank">GitHub</a>
+                    <a href="https://www.linkedin.com/in/daniellongacre/" target="_blank">LinkedIn</a>
                 </div>
             </div>
         </section>
