Added picture of myself to about me section

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     <p> I'm a computer programmer, passionate about problem 
                         solving and learning new skills. I have 2 years of 
                         experience with several projects.</p>
+                    <div id="selfie">
+                            <img src="./assets/images/blue_shirt.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </section>
