Playing around with media queries for the selfie img and added img alt attribute

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         solving and learning new skills. I have 2 years of 
                         experience with several projects.</p>
                     <div id="selfie">
-                            <img src="./assets/images/blue_shirt.jpg" alt="">
+                            <img src="./assets/images/blue_shirt.jpg" alt="Picture of Daniel Wearing a blue shirt">
                     </div>
                 </div>
             </div>
