Moved photo of myself to the hero div and resized in CSS

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <div id="hero">
         <img alt="Digital Spider's Web">
         <h2>Future Portfolio!</h2>
+        <img id="blueshirt" src="./assets/images/blue_shirt.jpg" alt="Picture of Daniel wearing blue shirt">
     </div>
     <main>
         <!-- About Section -->
