Added comments in HTML and deleted some in CSS

--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         <!-- Work Section  -->
         <section id="work">
             <div class="container">
+                <!-- All left side titles have the same class -->
                 <div class="title">
                     <h2>Work</h2>
                 </div>
                 <div class="content">
+                    <!-- All cards have the same class and separate ids -->
                     <div class="box" id="work1">
                         <div class="backgrounds">
                             <h4>Surf Report</h4> 
