Added link and site image to work 2 card

--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
                         </div>
                     </div>
                     <div class="box" id="work2">
-                        <div class="backgrounds">
-                            <h4>LED Wall</h4>
-                            <p>Node/IoT</p>
-                        </div>
+                        <a href="https://brianahlers.github.io/lyriclookup/">
+                            <div class="backgrounds">
+                                <h4>Lyric Lookup</h4>
+                                <p>HTML/CSS/JavaScript</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="box" id="work3">
                         <div class="backgrounds">
