Added Project 2 to Work section

--- a/index.html
+++ b/index.html
@@ -67,10 +67,14 @@
                         </div>
                     </div>
                     <div class="box" id="work4">
-                        <div class="backgrounds">
-                            <h4>Pastel Puzzels</h4> 
-                            <p>MERN Stack</p>
-                        </div>
+                        <a href="https://github.com/akcodes29/Leap-To-Success">
+                            <div class="backgrounds">
+                                <h4>Leap-To-Success</h4> 
+                                <p>JavaScript
+                                    /Sequelize
+                                    /Handlebars</p>
+                            </div>
+                        </a>
                     </div>
                     <div class="box" id="work5">
                         <div class="backgrounds">
